@@ -5,7 +5,6 @@ import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.measure.Unit;
@@ -71,7 +70,7 @@ public class AperStage3Current2NIBPVariableTest {
   @Test
   public void testGetUnit() {
     List<? extends Unit<?>> actual = EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream()
-        .map(DependentVariable::getUnit).collect(Collectors.toList());
+        .map(DependentVariable::getUnit).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
             MetricPrefix.MILLI(Units.OHM),
@@ -85,7 +84,7 @@ public class AperStage3Current2NIBPVariableTest {
   @Test
   public void testOptions() {
     List<Variable.Option> actual = EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream()
-        .flatMap(v -> v.options().stream()).collect(Collectors.toList());
+        .flatMap(v -> v.options().stream()).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
             Variable.Option.VISIBLE, Variable.Option.VISIBLE, Variable.Option.VISIBLE,
